--- a/css /login.css
+++ b/css /login.css
@@ -5,10 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: url(/css/images/lightgreen.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-color: aliceblue;
 }
 
 .Layout {
